# SeeOnline-FastAPI

./: .gitignore  pyproject.toml
src/core/: celery_app.py
