[tool.poetry]
package-mode = false
name = "seeonlinefastapi"
version = "0.1.0"
description = ""
authors = ["lian <xdxdxd4305@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
